--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-select": "^5.8.0",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
