--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
+    "react-calendar": "^4.6.1",
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
