--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-calendar": "^4.6.1",
