--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: build
-      run: sudo apt update
-      run: sudo apt install nodejs
-      run: sudo apt install npm
-      run: npm install
-      run: npm run build
+      run: sudo apt update ; sudo apt install nodejs ; sudo apt install npm ; npm install ; npm run build
 
     - name: Create cd bucket
       uses: bitovi/github-actions-deploy-static-site-to-aws@v0.1.3
