--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,16 @@ jobs:
     - name: build
       run: sudo apt update ; sudo apt install nodejs ; sudo apt install npm ; npm install ; npm run build ; pwd ; ls ; ls .. ; ls ../..
 
-    # - name: Create cd bucket
-    #   uses: bitovi/github-actions-deploy-static-site-to-aws@v0.1.3
-    #   with:
-    #     aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_SANDBOX}}
-    #     aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SANDBOX}}
-    #     aws_default_region: us-west-1
+    - name: Create cd bucket
+      uses: bitovi/github-actions-deploy-static-site-to-aws@v0.1.3
+      with:
+        aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_SANDBOX}}
+        aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SANDBOX}}
+        aws_default_region: us-west-1
 
-    #     tf_action: 'apply'
-    #     tf_state_bucket_destroy: true
-    #     aws_spa_source_folder: 'dist'
+        tf_action: 'apply'
+        tf_state_bucket_destroy: true
+        aws_spa_source_folder: "/home/runner/work/FrontEnd_PI_C4_Grupo5_DH/FrontEnd_PI_C4_Grupo5_DH/dist"
         
-    #     aws_spa_cdn_enabled: true
-    #     aws_resource_identifier: '1023c04_GRUPO5_final'
+        aws_spa_cdn_enabled: true
+        aws_resource_identifier: '1023c04_GRUPO5_final'
