--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: 'cd-front'
 run-name: 'cd-front'
 on:
+  workflow_dispatch:
   pull_request:
     branches: [ main ]
 
@@ -25,7 +26,7 @@ jobs:
 
         tf_action: 'apply'
         tf_state_bucket_destroy: true
-        aws_spa_source_folder: 'dist'
+        aws_spa_source_folder: '/dist'
         
         aws_spa_cdn_enabled: true
         aws_resource_identifier: '1023c04_GRUPO5_final'
