--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,6 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
 
-    - name: build
-      run: sudo apt update ; sudo apt install nodejs ; sudo apt install npm ; npm install ; npm run build
-
     - name: Create cd bucket
       uses: bitovi/github-actions-deploy-static-site-to-aws@v0.1.3
       with:
@@ -28,3 +25,5 @@ jobs:
         
         aws_spa_cdn_enabled: true
         aws_resource_identifier: '1023c04_GRUPO5_final'
+
+        aws_spa_source_folder: 'dist/'
