--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,12 @@ jobs:
       with:
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_SANDBOX}}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SANDBOX}}
-        aws_default_region: us-west-1
+        aws_default_region: us-east-1
 
         tf_action: 'apply'
         tf_state_bucket_destroy: true
         
         aws_spa_cdn_enabled: true
-        aws_resource_identifier: '1023c04_GRUPO5_final'
+        aws_resource_identifier: '1023c04grupo5front'
 
         aws_spa_source_folder: 'dist'
